--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hkbus-eta",
+  "name": "hk-eta",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,7 +15,8 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-telegram-bot-api": "^0.40.0"
   },
   "devDependencies": {}
 }
