--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-telegram-bot-api": "^0.40.0"
+    "telegraf": "^3.33.3"
   },
   "devDependencies": {}
 }
