Add the routes.json
Add the function to check if a route number is valid

--- a/now.json
+++ b/now.json
@@ -5,10 +5,7 @@
         "API_KEY": "@api_key"
     },
     "builds": [
-        {
-            "src": "*.js",
-            "use": "@now/node"
-        }
+        { "src": "*.js", "use": "@now/node" }
     ],
     "routes": [
       { "src": "/message", "dest": "/index.js" }
