--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "Kiros Choi",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.17.1",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.2",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
