--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "hk-eta",
   "version": "1.0.0",
-  "description": "",
+  "engines" : { 
+    "node" : ">=12.0.0" 
+  },
+  "description": "A telegram bot to get the ETA of HK public transport.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
