--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hk-eta",
+  "name": "tg-hketa",
   "version": "1.0.0",
   "engines": {
     "node": ">=12.0.0"
@@ -12,7 +12,9 @@
     "dev": "now dev"
   },
   "keywords": [
-    "nodejs"
+    "nodejs",
+    "telegram",
+    "bot"
   ],
   "author": "Kiros Choi",
   "license": "GPL-3.0-or-later",
