Set the server region closer to Hong Kong

--- a/now.json
+++ b/now.json
@@ -9,5 +9,6 @@
     ],
     "routes": [
       { "src": "/message", "dest": "/index.js" }
-    ]
+    ],
+    "regions": ["hkg1", "tpe1", "sin1", "hnd1"]
 }  
