--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "telegraf": "^3.33.3"
+    "telegraf": "^3.33.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {}
 }
