--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Kiros Choi",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@sentry/node": "^5.10.2",
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^8.2.0",
