Add Google Analytics Add IP Geolocation API to find out Telegram servers' location

--- a/now.json
+++ b/now.json
@@ -3,7 +3,9 @@
     "name": "tg-hketa",
     "env": {
         "TG_KEY": "@tg_key",
-        "SENTRY_KEY": "@sentry_key"
+        "SENTRY_KEY": "@sentry_key",
+        "GA_TID": "@ga_tid",
+        "IPG_KEY": "@ipg_key"
     },
     "builds": [
         { "src": "*.js", "use": "@now/node" }
