--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tg-hketa",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "node": ">=12.0.0"
   },
@@ -29,8 +29,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ip-geolocation-api-javascript-sdk": "^1.0.7",
     "moment": "^2.24.0",
+    "now": "^16.7.2",
+    "request-ip": "^2.1.3",
     "telegraf": "^3.33.3",
+    "universal-analytics": "^0.4.20",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {}
