Update get-route.js to adapt the new API
Add semicolon

--- a/now.json
+++ b/now.json
@@ -1,11 +1,9 @@
 {
     "version": 2,
-    "name": "tg-hketa",
     "env": {
         "TG_KEY": "@tg_key",
         "SENTRY_KEY": "@sentry_key",
-        "GA_TID": "@ga_tid",
-        "IPG_KEY": "@ipg_key"
+        "GA_TID": "@ga_tid"
     },
     "functions": {
         "api/*.js": {
