--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tg-hketa",
   "version": "1.0.1",
   "engines": {
-    "node": ">=12.0.0"
+    "node": "12.x"
   },
   "description": "A telegram bot to get the ETA of HK public transport.",
   "main": "index.js",
@@ -30,7 +30,6 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "now": "^16.7.2",
     "telegraf": "^3.35.0",
     "universal-analytics": "^0.4.20",
     "xml-js": "^1.6.11"
