--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node index.js",
     "prod": "now --prod --token=$NOW_TOKEN",
     "local": "now dev",
-    "updateRoutes": "node utils/get-routes-NLB.js && node utils/get-routes.js"
+    "updateRoutes": "node utils/get-routes-NLB.js && node utils/get-routes.js",
+    "setWebhook": "curl -F \"url=https://%url%/message\" https://api.telegram.org/bot%KC_DEV_BOT%/setWebhook"
   },
   "keywords": [
     "nodejs",
@@ -25,11 +26,15 @@
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
     "telegraf": "^3.37.0",
     "universal-analytics": "^0.4.20",
     "xml-js": "^1.6.11"
