--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "start": "node index.js",
     "prod": "now --prod --token=$NOW_TOKEN",
     "local": "now dev",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "updateRoutes": "node utils/get-routes-NLB.js && node utils/get-routes.js",
-    "setWebhook": "curl -F \"url=https://$URL/message\" https://api.telegram.org/bot$TOKEN/setWebhook"
+    "setWebhook": "curl -F \"url=https://$URL/message\" https://api.telegram.org/bot$TOKEN/setWebhook",
+    "prepare": "husky install"
   },
   "keywords": [
     "nodejs",
@@ -33,11 +36,25 @@
     "express": "^4.17.1",
     "graphql": "^15.2.0",
     "graphql-tag": "^2.10.3",
+    "module-alias": "^2.2.2",
     "moment": "^2.27.0",
     "node-fetch": "^2.6.1",
-    "telegraf": "^3.38.0",
+    "telegraf": "^4.3.0",
+    "telegraf-inline-menu": "^6.2.1",
+    "typescript": "^4.2.4",
     "universal-analytics": "^0.4.20",
     "xml-js": "^1.6.11"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "husky": "^6.0.0",
+    "jest": "^27.0.1",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.0",
+    "ts-jest": "^27.0.1",
+    "ts-node": "^10.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,md}": "prettier --write"
+  }
 }
