--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "NODE_ENV=development ts-node-dev --respawn --watch .",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --watch *.ts",
     "prod": "now --prod --token=$NOW_TOKEN",
     "local": "now dev",
     "build": "rm -rf dist && tsc",
@@ -45,6 +45,7 @@
     "node-fetch": "^2.6.1",
     "telegraf": "^4.3.0",
     "telegraf-inline-menu": "^6.2.1",
+    "telegraf-stateless-question": "^2.0.1",
     "typescript": "^4.2.4",
     "universal-analytics": "^0.4.20",
     "xml-js": "^1.6.11"
