--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
   "description": "A telegram bot to get the ETA of HK public transport.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node dist/api/index.js",
     "dev": "NODE_ENV=development ts-node-dev --respawn --watch *.ts",
     "prod": "now --prod --token=$NOW_TOKEN",
     "local": "now dev",
-    "build": "rm -rf dist && tsc",
+    "build": "npm run update:route && rm -rf dist && tsc && cp -r data dist/",
     "test": "jest",
     "test:watch": "jest --watch",
     "update:route": "ts-node src/services/routes.ts",
-    "updateRoutes": "node utils/get-routes-NLB.js && node utils/get-routes.js",
     "setWebhook": "curl -F \"url=https://$URL/message\" https://api.telegram.org/bot$TOKEN/setWebhook",
     "prepare": "husky install"
   },
