feat: update script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "A telegram bot to get the ETA of HK public transport.",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/api/index.js",
+    "start": "NODE_ENV=production node dist/api/index.js",
     "dev": "NODE_ENV=development ts-node-dev --respawn --watch *.ts",
     "prod": "now --prod --token=$NOW_TOKEN",
     "local": "now dev",
