--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "tg-hketa",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "engines": {
     "node": "12.x"
   },
   "description": "A telegram bot to get the ETA of HK public transport.",
   "main": "dist/src/app.js",
   "scripts": {
-    "start": "NODE_ENV=production node dist/src/app.js",
+    "start": "NODE_ENV=production node -r source-map-support/register --trace-warnings dist/src/app.js",
     "dev": "NODE_ENV=development ts-node-dev --respawn --watch *.ts",
     "build": "npm run update:route && rm -rf dist && tsc && cp -r data dist/",
     "test": "jest",
@@ -24,39 +24,34 @@
   "author": "Kiros Choi",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@sentry/node": "^5.18.1",
+    "@sentry/node": "^6.5.0",
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.6",
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
     "@types/luxon": "^1.26.5",
-    "apollo-boost": "^0.4.9",
     "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "graphql": "^15.2.0",
-    "graphql-tag": "^2.10.3",
     "lodash": "^4.17.21",
     "luxon": "^1.27.0",
     "module-alias": "^2.2.2",
-    "moment": "^2.27.0",
     "node-fetch": "^2.6.1",
+    "source-map-support": "^0.5.19",
     "telegraf": "^4.3.0",
     "telegraf-inline-menu": "^6.2.1",
     "telegraf-stateless-question": "^2.0.1",
-    "typescript": "^4.2.4",
-    "universal-analytics": "^0.4.20",
-    "xml-js": "^1.6.11"
+    "typescript": "^4.3.2",
+    "universal-analytics": "^0.4.23"
   },
   "devDependencies": {
     "husky": "^6.0.0",
-    "jest": "^27.0.1",
+    "jest": "^27.0.3",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
-    "ts-jest": "^27.0.1",
+    "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
     "ts-node-dev": "^1.1.6"
   },
