--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "NODE_ENV=production node -r source-map-support/register --trace-warnings dist/src/app.js",
     "dev": "NODE_ENV=development ts-node-dev --respawn --watch *.ts",
+    "dev:app": "npm run dev src/app.ts",
     "build": "npm run update:route && rm -rf dist && tsc && cp -r data dist/",
     "test": "jest",
     "test:watch": "jest --watch",
