--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: Fly Deploy
 
 on: 
+  push:
+    branches:
+      - master
+  pull_request:
   workflow_run:
     workflows: ["Unit Test"]
     branches: [master]
