--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
 name: Fly Deploy
 
 on: 
-  push:
-    branches:
-      - master
-  pull_request:
   workflow_run:
     workflows: ["Unit Test"]
     branches: [master]
@@ -13,12 +9,13 @@ on:
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
 jobs:
   deploy:
       name: Deploy app
       runs-on: ubuntu-latest
+      if: ${{ github.event.workflow_run.conclusion == 'success' }}
       steps:
-        - if: ${{ github.event.workflow_run.conclusion == 'success' }}
         - uses: actions/checkout@v2
         - uses: superfly/flyctl-actions@1.1
           with:
