--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "telegraf-inline-menu": "^6.2.1",
     "telegraf-stateless-question": "^2.0.1",
     "typescript": "^4.3.2",
-    "universal-analytics": "^0.4.23"
+    "universal-analytics": "^0.4.23",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/cron": "^1.7.2",
     "@types/universal-analytics": "^0.4.4",
+    "@types/xml2js": "^0.4.8",
     "husky": "^6.0.0",
     "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
