--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/luxon": "^1.26.5",
     "axios": "^0.21.1",
     "cron": "^1.8.2",
+    "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/cron": "^1.7.2",
+    "@types/crypto-js": "^4.0.1",
     "@types/universal-analytics": "^0.4.4",
     "@types/xml2js": "^0.4.8",
     "husky": "^6.0.0",
