--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/lodash": "^4.14.180",
     "@types/luxon": "^2.3.1",
     "axios": "^0.26.1",
+    "axios-cache-adapter": "^2.7.3",
     "cron": "^1.8.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
