--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.21",
     "luxon": "^2.3.1",
     "module-alias": "^2.2.2",
+    "moize": "^6.1.0",
     "node-fetch": "^3.2.3",
     "source-map-support": "^0.5.21",
     "telegraf": "^4.7.0",
